--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -6,7 +6,7 @@
     <title th:text="${title}">Document</title>
 </head>
 <body>
-    <h1 th:text="${title}"></h1>
-    <h2 th:text="${author}"></h2>
+    <h1 th:text="${user.nombre}"></h1>
+    <h2 th:text="${user.apellido}"></h2>
 </body>
 </html>
